--- a/src/styles/splash.css
+++ b/src/styles/splash.css
@@ -1,44 +1,31 @@
-@keyframes flash-r {
-    0% {
-        background: #282a38;
-        /* box-shadow: 0 0 4px 4px rgba(255, 219, 46, 0.01); */
-    }
-    50% {
-        background: #ffdb2e;
-        /* box-shadow: 0 0 4px 4px rgba(255, 219, 46, 0.1); */
-    }
-    100% {
-        background: #282a38;
-        /* box-shadow: 0 0 4px 4px rgba(255, 219, 46, 0.01); */
-    }
+.splash-bg{
+    background-image: url(../assets/splash.png);
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes main-logo-animation {
-    0% {
-        transform: rotate(15deg);
+    0%{
+        transform: scale(1);
     }
-    50% {
-        transform: rotate(360deg);
+    50%{
+        transform: scale(1.2);
     }
-    100% {
-        transform: rotate(15deg);
+    100%{
+        transform: scale(1);
     }
 }
 
-#flash-r{
-    height: 100%;
-    width: 2px;
-    background: #282a38;
-    animation: flash-r 5000ms ease 250ms infinite;
-}
-
-#flash-l {
-    height: 100%;
-    width: 2px;
-    background: #282a38;
-    animation: flash-r 5000ms ease 750ms infinite;
-}
-
-#main-logo {
+.main-logo {
+    width: 20em;
+    height: 8em;
     animation: main-logo-animation 5000ms ease-in-out 1000ms infinite;
+    background: rgba(0,0,0,0.2);
+    padding: 6px;
+    border-radius: 5px;
+    /* animation: main-logo-animation 5000ms ease-in-out 1000ms infinite; */
 }
