quote panel, add and edit implemented

--- a/src/styles/splash.css
+++ b/src/styles/splash.css
@@ -29,3 +29,9 @@
     border-radius: 5px;
     /* animation: main-logo-animation 5000ms ease-in-out 1000ms infinite; */
 }
+
+/* ----------------- */
+
+.MuiDataGrid-row:hover {
+    cursor: pointer;
+}
