--- a/src/styles/splash.css
+++ b/src/styles/splash.css
@@ -33,9 +33,9 @@
 /* ----------------- */
 
 .sticky-toolbar {
+    /* position: sticky;
+    top: 80px; */
     padding: 0.5em;
-    position: sticky;
-    top: 80px;
     border-radius: 1em;
     background-color: #eee;
     z-index: 5
