sales page layout fixed, tickets form and layout reshaped

--- a/src/app/TextField/TextField.module.css
+++ b/src/app/TextField/TextField.module.css
@@ -2,7 +2,7 @@
     height: 45px;
     border-left: 3px solid rgb(43,140,255);
     border-radius: 0 4px;
-    width: 400px;
+    width: 25vw;
     display: flex;
     align-items: center;
     pad: 0 3px;
