new shadow for BasePaper, modify sales order details layout

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -57,3 +57,7 @@
 .MuiPickersBasePicker-container .MuiToolbar-root {
     padding: 3em 1em;
 }
+
+.MuiSelect-outlined.MuiSelect-outlined{
+    font-size: 0.8rem;
+}
