open in new tab link select

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,37 +1,3 @@
-/* body{
-    background-image: url("../assets/background.png");
-    z-index: -3;
-    height: 100vh;
-    background-position:bottom;
-    background-size: cover;
-
-} */
-/* body .Homebg{
-    position: absolute;
-    top:0;
-    right: 0;
-    background-color:#fff ;
-  
-    height: 100%;
-    width: 100%; 
-    z-index: -2;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  
-} */
-
-/* body .HomeContain{
-        position: absolute;
-        top:0;
-        right: 0;
-        background-image: url("../assets/icons/background.svg");
-      
-        height: 100%;
-        width: 100%; 
-        z-index: -1;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-      
-} */
+.MuiInputLabel-outlined{
+    transform: translate(14px, 11px) scale(1);
+}
