--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 0.800rem;
+    font-size: 0.8rem;
 }
 
 .MuiToolbar-root {
@@ -17,19 +17,19 @@
     margin-right: 24px;
 }
 
-.MuiListItemIcon-root>.MuiSvgIcon-root {
+.MuiListItemIcon-root > .MuiSvgIcon-root {
     color: rgb(132, 132, 132);
 }
 
-.MuiListItemText-root>.MuiTypography-body1 {
+.MuiListItemText-root > .MuiTypography-body1 {
     font-weight: 200;
 }
 
-.Active>.MuiSvgIcon-root {
-    color: #fff !important
+.Active > .MuiSvgIcon-root {
+    color: #fff !important;
 }
 
-.Active>.MuiTypography-body1 {
+.Active > .MuiTypography-body1 {
     color: #fff !important;
     font-weight: 500;
 }
@@ -58,6 +58,9 @@
     padding: 3em 1em;
 }
 
-.MuiSelect-outlined.MuiSelect-outlined{
+.MuiSelect-outlined.MuiSelect-outlined {
     font-size: 0.8rem;
+}
+.MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"] {
+    padding: 0px 65px 0px 5px !important;
 }
